dependency cleanup